--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,13 +4,12 @@ services:
     build: .
     platform: linux/amd64
     volumes:
-      - .:/tomikuvzpevnik
       - sqlite_data:/tomikuvzpevnik/sqlite_data
       - /var/www/static/:/var/www/static/
       - /var/certbot/conf:/etc/letsencrypt/:ro
     expose: 
       - "8000"
-    image: hruza/tomikuvzpevnik:rpi
+    image: hruza/tomikuvzpevnik:gcloud
     container_name: tomikuvzpevnik
     restart: always
     command: sh -c "python3 manage.py makemigrations && python3 manage.py migrate --noinput && python3 manage.py collectstatic --noinput && python -m gunicorn --config gunicorn_config.py project.wsgi:application"
