--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,14 +2,14 @@ version: "3"
 services:
   tomikuvzpevnik:
     build: .
-    platform: linux/amd64
+    platform: linux/arm64
     volumes:
       - sqlite_data:/tomikuvzpevnik/sqlite_data
       - /var/www/static/:/var/www/static/
       - /var/certbot/conf:/etc/letsencrypt/:ro
     expose: 
       - "8000"
-    image: hruza/tomikuvzpevnik:gcloud
+    image: hruza/tomikuvzpevnik:rpi
     container_name: tomikuvzpevnik
     restart: always
     command: sh -c "python3 manage.py makemigrations && python3 manage.py migrate --noinput && python3 manage.py collectstatic --noinput && python -m gunicorn --config gunicorn_config.py project.wsgi:application"
